--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,7 +12,7 @@ dependencies:
   flutter:
     sdk: flutter
   provider: ^6.1.2
-  video_player: ^2.8.3
+  cached_video_player: any
   wakelock_plus: ^1.2.2
 
 dev_dependencies:
